<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    tools:context=".ui.community.DailyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <ImageButton
            android:id="@+id/like"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:adjustViewBounds="true"
            android:background="#00FFFFFF"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/heart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chat"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/user2"
            app:layout_constraintTop_toBottomOf="@+id/message2"
            app:layout_constraintVertical_bias="0.016" />

        <ImageButton
            android:id="@+id/chat"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:adjustViewBounds="true"
            android:background="#00FFFFFF"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message2"
            app:layout_constraintVertical_bias="0.016" />

        <ImageButton
            android:id="@+id/like1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:adjustViewBounds="true"
            android:background="#00FFFFFF"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/heart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chat1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message1"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/chat1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:adjustViewBounds="true"
            android:background="#00FFFFFF"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message1"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:background="#00FFFFFF"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/head1"
            app:layout_constraintBottom_toBottomOf="@+id/user1"
            app:layout_constraintEnd_toStartOf="@+id/user1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user1" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:background="#00FFFFFF"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/head2"
            app:layout_constraintBottom_toBottomOf="@+id/user2"
            app:layout_constraintEnd_toStartOf="@+id/user2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user2" />

        <ImageView
            android:id="@+id/message1"
            android:layout_width="360dp"
            android:layout_height="258dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/todo"
            android:src="@drawable/dogpic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/user2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:gravity="start|center_vertical"
            android:text="@string/cookie"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.205"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/user1"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:gravity="start|center_vertical"
            android:text="@string/ulrica"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.201"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message1"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/message2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="start|center_vertical"
            android:text="@string/a_week_away_looking_for_a_pet_store_to_foster"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.183"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user1"
            app:layout_constraintVertical_bias="0.147" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>